<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextView"
        android:layout_width="0dp"
        android:layout_height="116dp"
        android:background="#00becc"

        android:contextClickable="false"
        android:maxLength="17"
        android:maxLines="2"
        android:nestedScrollingEnabled="false"
        android:text="0"

        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onDigitClicked"
        android:text="@string/btn1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onDigitClicked"
        android:text="@string/btn2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/TextView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onDigitClicked"
        android:text="@string/btn3"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/TextView" />


    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onClickOperator"
        android:text="@string/btnPlus"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/TextView" />


    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onDigitClicked"
        android:text="@string/btn4"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onDigitClicked"
        android:text="@string/btn5"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />


    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onDigitClicked"
        android:text="@string/btn6"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


    <Button
        android:id="@+id/buttonMin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onClickOperator"
        android:text="@string/btnMin"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onDigitClicked"
        android:text="@string/btn7"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onDigitClicked"
        android:text="@string/btn8"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onDigitClicked"
        android:text="@string/btn9"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/buttonDivis"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onClickOperator"
        android:text="@string/btnDivis"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonMin" />


    <Button
        android:id="@+id/buttonC"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onClickClear"
        android:text="@string/btnC"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button0"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onDigitClicked"
        android:text="@string/btn0"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/buttonC"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/buttonEql"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onClickEqual"
        android:text="@string/btnEql"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/buttonMulty"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:width="80dp"
        android:height="80dp"
        android:background="#0761fd"
        android:onClick="onClickOperator"
        android:text="@string/btnMulty"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toEndOf="@+id/buttonEql"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivis" />


</android.support.constraint.ConstraintLayout>